unpackaged/main/default/objects/Semester__c/Semester__c.object-meta.xml
<CustomObject>
    <label>Semester</label>
    <nameField>
        <label>Semester Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Semesters</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>