unpackaged/main/default/objects/Semester__c/fields/Course_Director__c.field-meta.xml
<CustomField>
    <fullName>Course_Director__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Course Director</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Course_Director</relationshipName>
    <type>Lookup</type>
</CustomField>