unpackaged/main/default/objects/Semester__c/fields/Deposit_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Deposit_Due_Date__c</fullName>
    <label>Deposit Due Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>