unpackaged/main/default/objects/Semester__c/fields/Field_Instructor__c.field-meta.xml
<CustomField>
    <fullName>Field_Instructor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Field Instructor</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Field_Instructor</relationshipName>
    <type>Lookup</type>
</CustomField>