unpackaged/main/default/objects/Semester__c/fields/Program_Leader__c.field-meta.xml
<CustomField>
    <fullName>Program_Leader__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Program Leader</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Program_Leader</relationshipName>
    <type>Lookup</type>
</CustomField>