unpackaged/main/default/objects/Semester__c/fields/Semester_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Semester_End_Date__c</fullName>
    <label>Semester End Date</label>
    <type>Date</type>
</CustomField>