unpackaged/main/default/objects/Semester__c/fields/Semester_Location__c.field-meta.xml
<CustomField>
    <fullName>Semester_Location__c</fullName>
    <label>Semester Location</label>
    <length>255</length>
    <type>Text</type>
</CustomField>