unpackaged/main/default/objects/Semester__c/fields/Semester_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Semester_Start_Date__c</fullName>
    <label>Semester Start Date</label>
    <type>Date</type>
</CustomField>