unpackaged/main/default/objects/Semester__c/fields/Student_Success_Coordinator__c.field-meta.xml
<CustomField>
    <fullName>Student_Success_Coordinator__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Student Success Coordinator</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Student_Success_Coordinator</relationshipName>
    <type>Lookup</type>
</CustomField>