unpackaged/main/default/objects/Semester__c/fields/Tuition__c.field-meta.xml
<CustomField>
    <fullName>Tuition__c</fullName>
    <inlineHelpText>Price of the Semester</inlineHelpText>
    <label>Tuition</label>
    <precision>9</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>