unpackaged/main/default/objects/Semester__c/fields/Tuition_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Tuition_Due_Date__c</fullName>
    <label>Tuition Due Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>