unpackaged/main/default/objects/Semester__c/listViews/Semesters_with_ID.listView-meta.xml
<ListView>
    <fullName>Semesters_with_ID</fullName>
    <columns>NAME</columns>
    <columns>OBJECT_ID</columns>
    <filterScope>Everything</filterScope>
    <label>Semesters with ID</label>
</ListView>